fix(core): 15855 map footer is cut on mobile

--- a/src/views/Map/Layouts/Mobile/Mobile.module.css
+++ b/src/views/Map/Layouts/Mobile/Mobile.module.css
@@ -3,12 +3,12 @@
   width: 100%;
   height: 100%;
   grid-template-columns: calc(40px + var(--double-unit)) minmax(40px, 100vw);
-  grid-template-rows: 180px 1fr 1fr var(--unit);
+  grid-template-rows: 1fr 1fr 1fr var(--unit);
 }
 
 @media screen and (max-width: 360px) {
   .contentWrap {
-    grid-template-rows: 180px 1fr 1fr var(--unit);
+    grid-template-rows: 1fr 1fr 1fr 0;
   }
 }
 
